container overflow bug fixed

--- a/src/styles/receipt.scss
+++ b/src/styles/receipt.scss
@@ -1,5 +1,5 @@
 .receipt-wrapper {
-  width: 97%;
+  width: 100%;
   background-color: #ffffff;
   font-size: 18px;
   padding: 15px 15px 30px;
@@ -8,6 +8,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
 
   .receipt-headline {
     color: #33373d;
